--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 .bluecolo{
     background-color: red;
+    padding: 10px;
 }
 
 footer{
     position: fixed;
     left: 0;
     bottom: 0;
+    width: 100%;
 }
